testdata/baselines/reference/submodule/compiler/ensureNoCrashExportAssignmentDefineProperrtyPotentialMerge.errors.txt
index.js(2,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
index.js(3,23): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
namespacer.js(2,3): error TS2339: Property 'NS' does not exist on type '{}'.
namespacer.js(4,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
namespacey.js(2,3): error TS2339: Property 'bar' does not exist on type '{}'.
namespacey.js(3,1): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.


==== index.js (2 errors) ====
    const _item = require("./namespacer");
    module.exports = 12;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    Object.defineProperty(module, "exports", { value: "oh no" });
                          ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    
==== namespacey.js (2 errors) ====
    const A = {}
    A.bar = class Q {}
      ~~~
!!! error TS2339: Property 'bar' does not exist on type '{}'.
    module.exports = A;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
==== namespacer.js (2 errors) ====
    const B = {}
    B.NS = require("./namespacey");
      ~~
!!! error TS2339: Property 'NS' does not exist on type '{}'.
    Object.defineProperty(B, "NS", { value: "why though", writable: true });
    module.exports = B;
    ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    